--- a/index.html
+++ b/index.html
@@ -28,6 +28,21 @@
 
 
     <!-- HERO -->
+    <section id="hero" class="hero-section d-flex align-items-center">
+        <div class="overlay"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <h1 class="hero-title text-white">Bienvenido a Nuestro Hospital</h1>
+                    <p class="hero-description text-white my-4">
+                        Brindamos atención médica de calidad y estamos comprometidos con su bienestar.
+                    </p>
+                    <a href="#services" class="btn btn-primary">Conoce Nuestros Servicios</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 
     <!-- WHY-US -->
@@ -125,7 +140,6 @@
 
 
     <!-- SERVICES -->
-
     <section class="section services">
         <div class="container">
             <h2 class="heading display-3">Nuestros servicios</h2>
@@ -271,6 +285,46 @@
     </section>
 
     <!-- GALLERY -->
+    <section id="gallery" class="section gallery-section">
+        <div class="container">
+            <h2 class="heading display-2">Nuestras instalaciones</h2>
+            <div class="gallery-grid">
+                <!-- IMAGE 1 -->
+                <div class="gallery-item">
+                    <img src="./img/test.jpg" alt="Gallery Image 1" class="img-fluid">
+                </div>
+                <!-- IMAGE 2 -->
+                <div class="gallery-item">
+                    <img src="./img/test.jpg" alt="Gallery Image 2" class="img-fluid">
+                </div>
+                <!-- IMAGE 3 -->
+                <div class="gallery-item">
+                    <img src="./img/test.jpg" alt="Gallery Image 3" class="img-fluid">
+                </div>
+                <!-- IMAGE 4 -->
+                <div class="gallery-item">
+                    <img src="./img/test.jpg" alt="Gallery Image 4" class="img-fluid">
+                </div>
+                <!-- IMAGE 5 -->
+                <div class="gallery-item">
+                    <img src="./img/test.jpg" alt="Gallery Image 5" class="img-fluid">
+                </div>
+                <!-- IMAGE 6 -->
+                <div class="gallery-item">
+                    <img src="./img/test.jpg" alt="Gallery Image 6" class="img-fluid">
+                </div>
+                <!-- IMAGE 7 -->
+                <div class="gallery-item">
+                    <img src="./img/test.jpg" alt="Gallery Image 7" class="img-fluid">
+                </div>
+                <!-- IMAGE 8 -->
+                <div class="gallery-item">
+                    <img src="./img/test.jpg" alt="Gallery Image 8" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 
     <!-- CONTACT -->
